ThreadSanitizer: data race [@ event_base_loop] vs [@ event_set]
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox80 | --- | fixed |
People
(Reporter: bwc, Assigned: bwc)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
If true, this looks like a flaw down in libevent. However, it may also be because TSan does not grok fences. Saw this when running webrtc mochitests under TSan. Marking security for now, until we can determine whether this is a real flaw or not.
Comment 1•5 years ago
|
||
Which tests exactly did you run for this? We already run Mochitests in CI for TSan and I haven't seen this one before.
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
•
|
||
(In reply to Christian Holler (:decoder) from comment #1)
Which tests exactly did you run for this? We already run Mochitests in CI for TSan and I haven't seen this one before.
This happens on the webrtc mochitests, which are part of the "mda" mochitest suite (which has no TSan jobs right now, see bug 1648192). It also happens in the webrtc web-platform-tests.
| Assignee | ||
Comment 3•5 years ago
|
||
Looks like this is due to this flag:
Probably makes sense to suppress, but is kinda difficult because this flag is touched in macros all over the place.
There is a bug open on libevent: https://github.com/libevent/libevent/issues/777
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
Can you clear the sec flag on this, it looks pretty much benign to me?
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 5•5 years ago
|
||
See https://github.com/libevent/libevent/issues/777
Depends on D83794
| Assignee | ||
Comment 6•5 years ago
|
||
So, I'm not sure this manifests in our IPC code. I have only seen this down in webrtc.org, which also uses libevent.
| Assignee | ||
Comment 7•5 years ago
|
||
Comment 9•5 years ago
|
||
| bugherder | ||
Description
•