Bug 1652174: Suppress TSan race error in libevent's event_debug_mode_too_late r=dminor

See https://github.com/libevent/libevent/issues/777

Depends on D83794

Differential Revision: https://phabricator.services.mozilla.com/D83825